--- a/pages/cadastro-usuario.html
+++ b/pages/cadastro-usuario.html
@@ -17,10 +17,10 @@
         <nav class="cor-principal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">
+                    <a href="#!" class="brand-logo">
                         <i class="material-icons left">directions_car</i>RentACar
                     </a>
-                    <a href="#" data-target="barra-mobile" class="sidenav-trigger">
+                    <a href="#!" data-target="barra-mobile" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
@@ -51,53 +51,6 @@
                 </div>
             </div>
         </nav>
-    </div>
-
-    <div id="modal-servico" class="modal">
-        <div class="modal-content">
-            <h4>Serviços</h4>
-            <div class="row">
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
-                        <p>Locação</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
-                        <p>Devolução</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/cliente.png">
-                        <p>Gerenciar Clientes</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/usuario.png">
-                        <p>Gerenciar Usuários</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/veiculo.png">
-                        <p>Gerenciar Frota</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/relatorio.png">
-                        <p>Relátorios</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
-        </div>
     </div>
 
     <main>
@@ -172,12 +125,12 @@
 
                     <div class="row">
                         <div class="col s12 m12 l6">
-                            <button id="button-cadastro" class="waves-effect waves-light btn" type="button">
-                <i class="material-icons left">check_circle</i>Cadastrar</button>
+                            <button class="waves-effect waves-light btn button-confirmar" type="submit">
+                                <i class="material-icons left">check_circle</i>Cadastrar</button>
                         </div>
                         <div class="col s12 m12 l6">
-                            <button id="button-cancelar-cadastro" class="waves-effect waves-light btn" type="button">
-                <i class="material-icons left">cancel</i>Cancelar</button>
+                            <button class="waves-effect waves-light btn button-cancelar" type="submit">
+                                <i class="material-icons left">cancel</i>Cancelar</button>
                         </div>
                     </div>
                 </form>
@@ -191,31 +144,31 @@
             <div class="row ">
                 <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-cliente" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/cliente.png">
+                        <img src="../assets/resources/img/menu/cliente.png">
                         <p>Gerenciar Clientes</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-usuario" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/usuario.png">
+                        <img src="../assets/resources/img/menu/usuario.png">
                         <p>Gerenciar Usuários</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-frota" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/veiculo.png">
+                        <img src="../assets/resources/img/menu/veiculo.png">
                         <p>Gerenciar Frota</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-relatorio" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio.png">
+                        <img src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
                 </div>
@@ -232,13 +185,13 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="veiculos-disponiveis.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Veículos disponíveis</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="devolucao.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/devolucao.png">
+                        <img src="../assets/resources/img/menu/devolucao.png">
                         <p>Devoluções</p>
                     </a>
                 </div>
@@ -255,13 +208,13 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="cadastro-cliente.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
+                        <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Cliente</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-cliente.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Cliente</p>
                     </a>
                 </div>
@@ -278,13 +231,13 @@
             <div class="row">
                 <div class="col s6 m2 ">
                     <a href="cadastro-usuario.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
+                        <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Usuário</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-usuario.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Usuário</p>
                     </a>
                 </div>
@@ -301,25 +254,25 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="cadastro-veiculo.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Adicionar Novo Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-veiculo.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Alterar Dados do Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
+                        <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Enviar Veículo para oficina</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/retornar-oficina.png">
+                        <img src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
                     </a>
                 </div>
@@ -337,19 +290,19 @@
             <div class="row ">
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio-lucros.png">
+                        <img src="../assets/resources/img/menu/relatorio-lucros.png">
                         <p>Relatório de Lucros</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Relatório de Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
+                        <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Relatório de Reparos</p>
                     </a>
                 </div>
