--- a/pages/devolucao.html
+++ b/pages/devolucao.html
@@ -83,10 +83,11 @@
                             <p><span>Data para Devolução:</span> 30/08/2019</p>
                             <p><span>Data Atual:</span> 30/08/2019</p>
                             <p><span>Multa por atraso:</span> R$0.00</p>
+                            <p><span>TOTAL:</span> R$250.00</p>
                         </div>
                     </div>
                     <div class="row">
-                        <button class="waves-effect waves-light btn right" type="submit">
+                        <button class="waves-effect waves-light btn right button-confirmar" type="submit">
                             <i class="material-icons left">check</i>confirmar Devolução</button>
                     </div>
                 </form>
@@ -102,31 +103,31 @@
             <div class="row ">
                 <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-cliente" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/cliente.png">
+                        <img src="../assets/resources/img/menu/cliente.png">
                         <p>Gerenciar Clientes</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-usuario" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/usuario.png">
+                        <img src="../assets/resources/img/menu/usuario.png">
                         <p>Gerenciar Usuários</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-frota" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/veiculo.png">
+                        <img src="../assets/resources/img/menu/veiculo.png">
                         <p>Gerenciar Frota</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-relatorio" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio.png">
+                        <img src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
                 </div>
@@ -143,13 +144,13 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="veiculos-disponiveis.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Veículos disponíveis</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="devolucao.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/devolucao.png">
+                        <img src="../assets/resources/img/menu/devolucao.png">
                         <p>Devoluções</p>
                     </a>
                 </div>
@@ -166,13 +167,13 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="cadastro-cliente.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
+                        <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Cliente</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-cliente.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Cliente</p>
                     </a>
                 </div>
@@ -189,13 +190,13 @@
             <div class="row">
                 <div class="col s6 m2 ">
                     <a href="cadastro-usuario.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
+                        <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Usuário</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-usuario.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Usuário</p>
                     </a>
                 </div>
@@ -212,25 +213,25 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="cadastro-veiculo.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Adicionar Novo Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-veiculo.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Alterar Dados do Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="enviar-veiculo-oficina.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
+                        <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Enviar Veículo para oficina</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="retornar-veiculo-oficina.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/retornar-oficina.png">
+                        <img src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
                     </a>
                 </div>
@@ -248,19 +249,19 @@
             <div class="row ">
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio-lucros.png">
+                        <img src="../assets/resources/img/menu/relatorio-lucros.png">
                         <p>Relatório de Lucros</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Relatório de Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
+                        <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Relatório de Reparos</p>
                     </a>
                 </div>
