--- a/pages/atualizar-dados-usuario.html
+++ b/pages/atualizar-dados-usuario.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../assets/libraries/materialize-v1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="../assets/resources/styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Alterar dados usuário</title>
+    <title>Alterar dados dos Usuários</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <nav class="cor-principal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">
+                    <a href="#!" class="brand-logo">
                         <i class="material-icons left">directions_car</i>RentACar
                     </a>
                     <a href="#" data-target="barra-mobile" class="sidenav-trigger">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col s12 m6">
                             <button class="waves-effect waves-light btn button-pesquisar" type="submit">
-                            <i class="material-icons left">check_circle</i>Pesquisar</button>
+                            <i class="material-icons left">search</i>Pesquisar</button>
                         </div>
                     </div>
                     <div id="div-dados-pessoa">
@@ -112,11 +112,11 @@
 
                         <div class="row">
                             <div class="col s12 m12 l6">
-                                <button id="button-cadastro" class="waves-effect waves-light btn" type="submit">
-                                <i class="material-icons left">check_circle</i>Cadastrar</button>
+                                <button class="waves-effect waves-light btn button-confirmar" type="submit">
+                                <i class="material-icons left">check_circle</i>Salvar Alterações</button>
                             </div>
                             <div class="col s12 m12 l6">
-                                <button id="button-cancelar-cadastro" class="waves-effect waves-light btn" type="button">
+                                <button class="waves-effect waves-light btn button-cancelar" type="submit">
                                 <i class="material-icons left">cancel</i>Cancelar</button>
                             </div>
                         </div>
@@ -133,33 +133,33 @@
         <div class="modal-content">
             <h4>Serviços</h4>
             <div class="row ">
-                <div class="col s6 m2 ">
+                <div class="col s6 m4 l2">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
                     </a>
                 </div>
-                <div class="col s6 m2 ">
+                <div class="col s6 m4 l2">
                     <a href="#modal-gerenciar-cliente" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/cliente.png">
+                        <img src="../assets/resources/img/menu/cliente.png">
                         <p>Gerenciar Clientes</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
+                <div class="col s6 m4 l2">
                     <a href="#modal-gerenciar-usuario" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/usuario.png">
+                        <img src="../assets/resources/img/menu/usuario.png">
                         <p>Gerenciar Usuários</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
+                <div class="col s6 m4 l2">
                     <a href="#modal-gerenciar-frota" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/veiculo.png">
+                        <img src="../assets/resources/img/menu/veiculo.png">
                         <p>Gerenciar Frota</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
+                <div class="col s6 m4 l2">
                     <a href="#modal-gerenciar-relatorio" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio.png">
+                        <img src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
                 </div>
@@ -176,13 +176,13 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="veiculos-disponiveis.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Veículos disponíveis</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="devolucao.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/devolucao.png">
+                        <img src="../assets/resources/img/menu/devolucao.png">
                         <p>Devoluções</p>
                     </a>
                 </div>
@@ -199,13 +199,13 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="cadastro-cliente.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
+                        <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Cliente</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-cliente.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Cliente</p>
                     </a>
                 </div>
@@ -222,13 +222,13 @@
             <div class="row">
                 <div class="col s6 m2 ">
                     <a href="cadastro-usuario.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
+                        <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Usuário</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-usuario.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Usuário</p>
                     </a>
                 </div>
@@ -245,25 +245,25 @@
             <div class="row">
                 <div class="col s6 m2">
                     <a href="cadastro-veiculo.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Adicionar Novo Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="atualizar-dados-veiculo.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
+                        <img src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Alterar Dados do Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="enviar-veiculo-oficina.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
+                        <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Enviar Veículo para oficina</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="retornar-veiculo-oficina.html">
-                        <img id="img-locacao" src="../assets/resources/img/menu/retornar-oficina.png">
+                        <img src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
                     </a>
                 </div>
@@ -281,19 +281,19 @@
             <div class="row ">
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio-lucros.png">
+                        <img src="../assets/resources/img/menu/relatorio-lucros.png">
                         <p>Relatório de Lucros</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
+                        <img src="../assets/resources/img/menu/locacao.png">
                         <p>Relatório de Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href=" ">
-                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
+                        <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Relatório de Reparos</p>
                     </a>
                 </div>
